# barcode_detection

./: .gitignore  CMakeLists.txt  main.cpp  run.sh  x.cpp
detection/: CMakeLists.txt
detection/include/: detection.h
detection/src/: detector.cpp  detector.h  markup.cpp  metrics.cpp
image_processing/: CMakeLists.txt
image_processing/gradient/: CMakeLists.txt
image_processing/gradient/include/: gradient.h
image_processing/gradient/sobel/: sobel.cpp  sobel.h
image_processing/hough/: CMakeLists.txt
image_processing/hough/include/: hough_transform.h
image_processing/hough/src/: aux.h  hough.cpp  hough.h
image_processing/img_fltr/: CMakeLists.txt
image_processing/img_fltr/include/: img_fltr.h
image_processing/img_fltr/src/: blur.cpp  blur.h  filter.cpp  filter.h
image_processing/include/: blur.h  filter.h  image_processing.h  otsu_threshold.h  sobel.h  threshold.h
image_processing/otsu/: CMakeLists.txt
image_processing/otsu/include/: otsu.h
image_processing/otsu/src/: otsu_threshold.cpp  otsu_threshold.h  threshold.cpp  threshold.h
image_processing/src/: aux.cpp  blur.cpp  filter.cpp  hough.cpp  otsu_threshold.cpp  sobel.cpp  threshold.cpp
pugixml/src/: CMakeLists.txt
